--- a/Apps.Pinecone/Apps.Pinecone.csproj
+++ b/Apps.Pinecone/Apps.Pinecone.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="RestSharp" Version="110.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Vector" />
+    </ItemGroup>
+
 </Project>
