--- a/Apps.Pinecone/Apps.Pinecone.csproj
+++ b/Apps.Pinecone/Apps.Pinecone.csproj
@@ -1,25 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-		<Product>Pinecone</Product>
-		<Description>Managed, cloud-native vector database that simplifies the integration of long-term memory into AI applications</Description>
-		<Version>1.0.1</Version>
-		<AssemblyName>Apps.Pinecone</AssemblyName>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.2.0-alpha4" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-      <PackageReference Include="RestSharp" Version="110.2.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Models\Vector" />
-    </ItemGroup>
-	<ItemGroup>
-		<EmbeddedResource CopyToOutputDirectory="Always" Include="image\icon.png" />
-	</ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <Product>Pinecone</Product>
+    <Description>Managed, cloud-native vector database that simplifies the integration of long-term memory into AI applications</Description>
+    <Version>1.0.2</Version>
+    <AssemblyName>Apps.Pinecone</AssemblyName>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.2.0-alpha4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\Vector" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource CopyToOutputDirectory="Always" Include="image\icon.png" />
+  </ItemGroup>
 </Project>
